--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> HTML, CSS, JavaScript, Python</li> 
+            <li><b>Languages:</b> HTML, CSS, JavaScript</li> 
             <li><b>Databases:</b> NoSQL, MongoDB</li>
             <li><b>Libraries:</b> React, Redux, Node.js </li>
             <li><b>Frameworks:</b> Express.js</li>
